social menu position fix when "wheretobuy" is visible

--- a/public/styles/BottomMenu.sass
+++ b/public/styles/BottomMenu.sass
@@ -45,11 +45,14 @@
 				min-width: 100px
 				display: inline-block
 
-	.social-bar
-		margin-left: 10px
+	.social-link-wrapper
+		padding-top: 5px
+
+		&.twitter
+			margin-left: 15px
 
 		a.social-link
-			
+		
 			padding: 0
 			margin: 0 5px
 			&.twitter
@@ -68,6 +71,8 @@
 				background: url('/resources/img/fb_normal.png')
 				+imt-hover
 					background: url('/resources/img/fb_over.png')
+
+	
 
 
 			
